History Menu now has buttons "Back" and "Forward"